# report-triage-agent

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py  metrics.py  queues.py  reports.py
backend/app/core/: config.py  ids.py
backend/app/db/: enums.py  models.py  session.py
backend/app/messaging/: __main__.py  consumer.py  events.py  handlers.py  nats_client.py  streams.py
backend/app/schemas/: classification.py  events.py  queue.py  reports.py
backend/app/services/: classifier.py  priority.py  reports_repo.py  review.py  routing.py
backend/app/temporal/: activities.py  client.py  worker.py  workflows.py
backend/scripts/: init-db.sh
backend/tests/: conftest.py  test_classifier.py  test_event_handlers.py  test_event_publishing.py  test_priority.py  test_review.py  test_routing.py  test_workflow.py
docs/: 01-overview.md  02-mvp-scope.md  03-product-requirements.md  04-api-spec.md  05-data-model.md  06-workflow-and-events.md  README.md
frontend/: Dockerfile  package.json
frontend/src/app/: layout.tsx  page.tsx
samples/: abuse.json  fraud.json  spam.json
scripts/: demo.sh
